--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>CRYSTAL PETERS ACADEMY</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-mobile.css" media="only screen and (max-width: 600px)">
-    <link rel="icon" href="icon.jpg" type="image/jpeg">
+    <link rel="icon" href="images/logo.png" type="image/png">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <meta name="google-site-verification" content="PwKy9nXWzVub9wgROfRsclrV3wioijF1wk1TS9MLp2Q" />
     <script src="script.js" defer></script>
