--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <i class="bx bx-menu" id="hamburger-icon"></i>
     
     
-    <img src="logo.png" alt="Crystal Peters Logo" class="logo">
+    <img src="images/logo.png" alt="Crystal Peters Logo" class="logo">
 
     <h1>Crystal Peters Academy</h1>
     <p>Nurturing Young Brains</p>
