--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   </ul>
 </nav>
 
-    <section id="carousel" class="section">
-        <div class="carousel">
+    <!--<section id="carousel" class="section">-->
+        <div class="carousel"id="carousel">
           <img src="images/image1.jpg" class="carousel-image active" alt="Slide 1">
           <img src="images/image2.jpg" class="carousel-image" alt="Slide 2">
           <img src="images/image3.jpg" class="carousel-image" alt="Slide 3">
@@ -50,7 +50,7 @@
           <img src="images/image6.jpg" class="carousel-image" alt="Slide 6">
           </div>
 
-    </section>
+   < !--</section>-->
 
     <section id="About-Us" class="section">
         <div class="container">
