--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <li><a href="#Contact-Us">Contact Us</a></li>
     <li><a href="#School-Gallery">School Gallery</a></li>
     <li><a href="#Our-Vision">Our Vision</a></li>
-    <li><a href="">Statistics</a></li>
+    <li><a href="#Statistics">Statistics</a></li>
   </ul>
 </nav>
 
@@ -140,7 +140,7 @@
             
         </div>
     </section>
-    <div class="school-stats">
+    <div class="school-stats" id="Statistics">
         <div class="stat-item">
             <div class="stat-icon"><i class='bx bxs-user-check'></i></div>
             <div class="stat-number">24</div>
