--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
     <section id="Our-Vision" class="section">
         <div class="container">
             <h2>Our Vision</h2>
+            <p>
+            At Crystal Peters Academy, our vision is to shape a future where children are not only equipped with academic knowledge, but also empowered with values, creativity, and confidence to succeed in a fast-changing world.
+            We envision a learning environment where every child — regardless of background — is inspired to dream beyond limitations, think independently, and lead with compassion. Our commitment is to nurture the whole child — intellectually, morally, socially, emotionally, and physically — in a safe and supportive atmosphere that brings out the best in each learner.
+            We aim to:
+            Build a strong foundation of academic excellence, where curiosity and a love for learning are developed from an early age.
+            Instill moral values such as honesty, respect, humility, and responsibility, which will guide our students throughout life.
+            Develop leaders of tomorrow, who are not afraid to face challenges, solve real-world problems, and create positive change in their communities.
+            Encourage the growth of skills and talents through creative arts, science, ICT, and sports — making learning not just effective, but exciting.
+            Foster a sense of belonging, where every child feels valued, seen, and supported by caring teachers and staff.
+            At Crystal Peters Academy, we do not only prepare students for exams — we prepare them for life.
+            We see a future filled with graduates from our school who will shine as doctors, engineers, artists, teachers, innovators, entrepreneurs, and global citizens — proud of where they started and confident in where they are going.
+            "We are raising stars. We are nurturing greatness. We are building the future — one child at a time."</p>
             
         </div>
     </section>
