--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
     <section id="School-Gallery" class="section">
         <div class="container">
             <h2>School Gallery</h2>
-            <video width="100%" height="240" controls>
-              <source src="images/nysc senth forth.mp4" type="video/mp4">
+            <video width="100%" height="50%" controls>
+              <source src="images/nysc sent forth.mp4" type="video/mp4">
               </video>
         </div>
     </section>
