--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="container">
             <h2>School Gallery</h2>
             <video width="100%" height="50%" controls>
-              <source src="images/nysc sent forth.mp4" type="video/mp4">
+              <source src="images/nysc sent forth.MP4" type="video/mp4">
               <source src="images/nysc sent forth.ogg" type="video/ogg">
               </video>
         </div>
