--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <section id="School-Gallery" class="section">
         <div class="container">
             <h2>School Gallery</h2>
-            <video width="100%" height="50%" controls>
+            <video width="100%" height="auto" controls>
               <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
               <source src="images/nysc senth forth 2025.ogg" type="video/ogg">
               </video>
