--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
             <h2>School Gallery</h2>
             <video width="100%" height="auto" controls>
               <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
-              <source src="images/nysc senth forth 2025.ogg" type="video/ogg">
+              
               </video>
+            <video width="100%" height="auto" controls>
+              <source src="images/nysc sent forth.mp4" type="video/mp4">
+              
         </div>
     </section>
 
