--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
             <h2>School Gallery</h2>
             <video width="100%" height="auto" controls>
               <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
-              
-              </video>
-            <video width="100%" height="auto" controls>
+               </video>
+            <video width="100%" height="auto" controls
+                <img src="images/image6.jpg" type="image/jpeg">
               <source src="images/ebube dance.mp4" type="video/mp4">
             </video>  
         </div>
