--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     </div>
 
     <div class="contact-item">
-      <i class="bx bx-phone"></i>
-      <a href="tel:+2348035261270">+234 803 526 1270</a>
+      <a href="tel:+2348035261270"><i class="bx bx-phone"></i>
+      +234 803 526 1270</a>
     </div>
 
     <div class="contact-item">
