--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     </div>
 
     <div class="contact-item">
-      <i class="bx bx-envelope"></i>
-      <a href="mailto:crystalpeteracademy@gmail.com">crystalpeteracademy@gmail.com</a>
+      <a href="mailto:crystalpeteracademy@gmail.com"><i class="bx bx-envelope"></i>
+      crystalpeteracademy@gmail.com</a>
     </div>
   </div>
 </section>
