--- a/index.html
+++ b/index.html
@@ -110,9 +110,12 @@
     <h2>Contact Us</h2>
 
     <div class="contact-item">
-      <i class="bx bx-map"></i>
-      <span>Behind Egun Bakery Along Soda King Company, See To Me B/Stop Igbesa Rd, Ogun State</span>
+      <a href="https://www.google.com/maps?q=Behind+Egun+Bakery+Along+Soda+King+Company,+See+To+Me+B/Stop+Igbesa+Rd,+Ogun+State" target="_blank">
+        <i class="bx bx-map"></i>
+        <span>Behind Egun Bakery Along Soda King Company, See To Me B/Stop Igbesa Rd, Ogun State</span>
+      </a>
     </div>
+
 
     <div class="contact-item">
       <a href="tel:+2348035261270"><i class="bx bx-phone"></i>
