--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section id="School-Gallery" class="section">
         <div class="container">
             <h2>School Gallery</h2>
-            <video width="100%" height="auto" controls>
+            <video width="100%" height="auto" controls poster="blackout.jpg">
               <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
                </video>
             <video width="100%" height="auto" controls
