--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <video width="100%" height="auto" controls poster="images/blackout.jpg">
               <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
                </video>
-            <video width="100%" height="auto" controls
+            <video width="100%" height="auto" controls>
                 <img src="images/image6.jpg" type="image/jpeg">
               <source src="images/ebube dance.mp4" type="video/mp4">
             </video>  
