--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="images/logo.png" type="image/png">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <meta name="google-site-verification" content="PwKy9nXWzVub9wgROfRsclrV3wioijF1wk1TS9MLp2Q" />
-    <script src="script.js" defer></script>
+   
 </head>
     
 <body>
@@ -132,13 +132,13 @@
     <section id="School-Gallery" class="section">
         <div class="container">
             <h2>School Gallery</h2>
-            <video width="100%" height="auto" controls poster="images/blackout.jpg">
+            <video width="100%" height="auto" loading="lazy" controls poster="images/blackout.jpg">
               <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
                </video>
 
-            <img src="images/image6.jpg" type="image/jpeg">
+            <img src="images/image6.jpg" loading="lazy" type="image/jpeg">
             
-            <video width="100%" height="auto" controls>
+            <video width="100%" height="auto" loading="lazy" controls>
                 <source src="images/ebube dance.mp4" type="video/mp4">
             </video>  
         </div>
@@ -214,6 +214,6 @@
       </a>
     </footer>
 
-    <script src="script.js"></script>
+     <script src="script.js" defer></script>
 </body>
 </html>
