--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
                </video>
 
-            <img src="images/image6.jpg" loading="lazy" type="image/jpeg">
+            <img src="images/image6.jpg" width="100%" height="auto" loading="lazy" type="image/jpeg">
             
             <video width="100%" height="auto" loading="lazy" controls>
                 <source src="images/ebube dance.mp4" type="video/mp4">
