--- a/index.html
+++ b/index.html
@@ -132,9 +132,13 @@
     <section id="School-Gallery" class="section">
         <div class="container">
             <h2>School Gallery</h2>
-            <video width="100%" height="auto" loading="lazy" controls poster="images/blackout.jpg">
-              <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
-               </video>
+        <figure>
+          <video width="100%" height="auto" controls poster="images/blackout.jpg">
+            <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
+            
+          </video>
+          <figcaption>Ex-Corper Ebube during sent forth at Crystal Peter Academy</figcaption>
+        </figure>
 
             <img src="images/image6.jpg" width="100%" height="auto" loading="lazy" type="image/jpeg">
             
