--- a/index.html
+++ b/index.html
@@ -137,14 +137,18 @@
             <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
             
           </video>
-          <figcaption>Ex-Corper Ebube during sent forth at Crystal Peter Academy</figcaption>
+          <figcaption>Ex-Corper Ebube during sent forth at Crystal Peters Academy</figcaption>
         </figure>
-
+            <figure>
             <img src="images/image6.jpg" width="100%" height="auto" loading="lazy" type="image/jpeg">
-            
-            <video width="100%" height="auto" loading="lazy" controls>
+                <figcaption> Crystal Peters Academy Educators</figcaption>
+            </figure>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/blackout.jpg">
                 <source src="images/ebube dance.mp4" type="video/mp4">
-            </video>  
+            </video> 
+              <figcaption>Ex-Corper Ebube during sent forth at Crystal Peters Academy</figcaption  
+            </figure>
         </div>
     </section>
 
