--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             </figure>
             <figure>
             <video width="100%" height="auto" loading="lazy" controls  poster="images/blackout.jpg">
-                <source src="images/ebube dance.mp4" type="video/mp4">
+                <source src="images/mrsudom.mp4" type="video/mp4">
             </video> 
-              <figcaption>Ex-Corper Ebube during sent forth at Crystal Peters Academy</figcaption  
+              <figcaption>Principal Crystal Peters Academy, Mrs Comfort Udom</figcaption  
             </figure>
         </div>
     </section>
