--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <figcaption> Crystal Peters Academy Educators</figcaption>
             </figure>
             <figure>
-            <video width="100%" height="auto" loading="lazy" controls  poster="images/blackout.jpg">
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/mrsudom.jpg">
                 <source src="images/mrsudom.mp4" type="video/mp4">
             </video> 
               <figcaption>Principal Crystal Peters Academy, Mrs Comfort Udom</figcaption  
