--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="container">
             <h2>School Gallery</h2>
         <figure>
-          <video width="100%" height="auto" controls poster="images/blackout.jpg">
+          <video width="100%" height="auto" controls poster="images/corperebube.jpg">
             <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
             
           </video>
@@ -147,7 +147,7 @@
             <video width="100%" height="auto" loading="lazy" controls  poster="images/mrsudom.jpg">
                 <source src="images/mrsudom.mp4" type="video/mp4">
             </video> 
-              <figcaption>Principal Crystal Peters Academy, Mrs Comfort Udom</figcaption  
+              <figcaption>Mrs Comfort Udom,Principal Crystal Peters Academy</figcaption  
             </figure>
         </div>
     </section>
