--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
             
           </video>
-          <figcaption>Ex-Corper Ebube during sent forth at Crystal Peters Academy</figcaption>
+          <figcaption>Ex-Corper Ebube During Sent Forth at Crystal Peters Academy</figcaption>
         </figure>
             <figure>
             <img src="images/image6.jpg" width="100%" height="auto" loading="lazy" type="image/jpeg">
@@ -148,6 +148,12 @@
                 <source src="images/mrsudom.mp4" type="video/mp4">
             </video> 
               <figcaption>Mrs Comfort Udom,Principal Crystal Peters Academy</figcaption  
+            </figure>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/music.jpg">
+                <source src="images/music.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Music Class Ongoing</figcaption  
             </figure>
         </div>
     </section>
