--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
             </video> 
               <figcaption>Music Class Ongoing</figcaption  
             </figure>
+            <figure>
+            <img src="images/playground.jpg" width="100%" height="auto" loading="lazy" type="image/jpeg">
+                <figcaption> Crystal Peters Academy Playground</figcaption>
+            </figure>
         </div>
     </section>
 
