--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div>
     <footer>
         <div class="container">
-            <p><small>&copy; 2025 Crystal Peter's Academy . All rights reserved.</small></p>
+            <span><p><small>&copy; 2025 Crystal Peter Academy . All rights reserved.</small></p></span>
             <p><small>Designed and Created by <a href="https://dreamstorealities.vercel.app/#">Ex-Corper Ebube</a></small></p>
         </div>
 
