--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
     </div>
     <footer>
         <div class="container">
-            <span><p><small>&copy; 2025 Crystal Peter Academy . All rights reserved.</small></p></span>
+            <p class="copyright-text">
+            <small>&copy; 2025 Crystal Peter Academy. All rights reserved.</small>
+             </p>
             <p><small>Designed and Created by <a href="https://dreamstorealities.vercel.app/#">Ex-Corper Ebube</a></small></p>
         </div>
 
