--- a/index.html
+++ b/index.html
@@ -159,6 +159,44 @@
             <img src="images/playground.jpg" width="100%" height="auto" loading="lazy" type="image/jpeg">
                 <figcaption> Crystal Peters Academy Playground</figcaption>
             </figure>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/cultural.jpg">
+                <source src="images/culturalday.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Our Cultural Day </figcaption  
+            </figure>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/footballteam.jpg">
+                <source src="images/footballteam.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Football Team</figcaption  
+            </figure>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/christmasparty.jpg">
+                <source src="images/christmasparty.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Christmas Party/Colour Day 2024</figcaption  
+            </figure>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/mike.jpg">
+                <source src="images/mike.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Corper Mike Anchoring Cultural Day Programme</figcaption  
+            </figure>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/assembly.jpg">
+                <source src="images/assembly.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Assembly Session</figcaption  
+            </figure>
+
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/red.jpg">
+                <source src="images/red.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Red House Presentation During Christmas Party/Colour Day </figcaption  
+            </figure>
+            
         </div>
     </section>
 
