--- a/index.html
+++ b/index.html
@@ -132,6 +132,18 @@
     <section id="School-Gallery" class="section">
         <div class="container">
             <h2>School Gallery</h2>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/mrsudom.jpg">
+                <source src="images/mrsudom.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Mrs Comfort Udom,Principal Crystal Peters Academy</figcaption  
+            </figure>
+            <figure>
+            <video width="100%" height="auto" loading="lazy" controls  poster="images/hassan.jpg">
+                <source src="images/hassan.mp4" type="video/mp4">
+            </video> 
+              <figcaption>Ex-Corper Hassan addressing the stundents</figcaption  
+            </figure>
         <figure>
           <video width="100%" height="auto" controls poster="images/corperebube.jpg">
             <source src="images/nysc senth forth 2025.mp4" type="video/mp4">
@@ -143,12 +155,7 @@
             <img src="images/image6.jpg" width="100%" height="auto" loading="lazy" type="image/jpeg">
                 <figcaption> Crystal Peters Academy Educators</figcaption>
             </figure>
-            <figure>
-            <video width="100%" height="auto" loading="lazy" controls  poster="images/mrsudom.jpg">
-                <source src="images/mrsudom.mp4" type="video/mp4">
-            </video> 
-              <figcaption>Mrs Comfort Udom,Principal Crystal Peters Academy</figcaption  
-            </figure>
+            
             <figure>
             <video width="100%" height="auto" loading="lazy" controls  poster="images/music.jpg">
                 <source src="images/music.mp4" type="video/mp4">
