--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <section id="About-Us" class="section">
         <div class="container">
             <h2>About Us</h2>
-            <p><strong>Welcome to Crystal Peters Academy, Where We Nurture Young Brains Since 2020.</strong></p><br/>
-            <p>Crystal Peter Academy is more than just a school .it is a home for excellence, growth, and transformation. Since its founding 5 years ago, our academy has been deeply committed to raising well-rounded learners who are prepared for the challenges of tomorrow.</p><br/>
+            <p><strong>Welcome to Crystal Peters Academy, Where We Nurture Young Brains Since 2017.</strong></p><br/>
+            <p>Crystal Peter Academy is more than just a school .it is a home for excellence, growth, and transformation. Since its founding 8 years ago, our academy has been deeply committed to raising well-rounded learners who are prepared for the challenges of tomorrow.</p><br/>
             <p> <strong>A Track Record of Excellence</strong></p>
-            <p>Founded in 2020 By Mrs Peter Nkechi Onyewsi, Crystal Peters Academy has quickly grown to become one of the most respected educational institutions in Ogun State. With a strong focus on academic excellence, character development, and modern teaching methods, we have consistently produced students who not only excel in the classroom but also demonstrate leadership and integrity in their communities.</p>
+            <p>Founded in 2017 By Mrs Peter Nkechi Onyewsi, Crystal Peters Academy has quickly grown to become one of the most respected educational institutions in Ogun State. With a strong focus on academic excellence, character development, and modern teaching methods, we have consistently produced students who not only excel in the classroom but also demonstrate leadership and integrity in their communities.</p>
             <p>Our school combines traditional values with 21st-century learning tools, giving our students the best of both worlds. Our dedicated team of teachers and staff work tirelessly to ensure that every child receives the attention, support, and resources needed to thrive.</p><br/>
             <p><strong>What Parents and Students Are Saying</strong></p>
             <p>"Crystal Peters Academy has transformed my child's learning experience. The teachers are kind, professional, and truly care about the students." — <em>Mrs Olamide</em> </p><br/>
@@ -74,7 +74,7 @@
             <li><p>Affordable School Fees with High-Quality Education</p></li><br/>
             </ul>    
             <p><strong>Growing With You</strong></p>
-            <p>In just five years, we have seen amazing progress , not only in the number of students we serve but also in the impact we make. Our students have gone on to win academic awards, represent the school in external competitions, and shine in their secondary school entrance exams.
+            <p>In just eight years, we have seen amazing progress , not only in the number of students we serve but also in the impact we make. Our students have gone on to win academic awards, represent the school in external competitions, and shine in their secondary school entrance exams.
             At Crystal Peter Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.<br/>
             </p>
             <p>We are the shining star,God has made us shine!</p>            
@@ -212,15 +212,15 @@
             <h2>Our Vision</h2>
             <p>
             At Crystal Peters Academy, our vision is to shape a future where children are not only equipped with academic knowledge, but also empowered with values, creativity, and confidence to succeed in a fast-changing world.
-            We envision a learning environment where every child — regardless of background — is inspired to dream beyond limitations, think independently, and lead with compassion. Our commitment is to nurture the whole child — intellectually, morally, socially, emotionally, and physically — in a safe and supportive atmosphere that brings out the best in each learner.
+            We envision a learning environment where every child regardless of background  is inspired to dream beyond limitations, think independently, and lead with compassion. Our commitment is to nurture the whole child intellectually, morally, socially, emotionally, and physically in a safe and supportive atmosphere that brings out the best in each learner.
             We aim to:
             Build a strong foundation of academic excellence, where curiosity and a love for learning are developed from an early age.
             Instill moral values such as honesty, respect, humility, and responsibility, which will guide our students throughout life.
             Develop leaders of tomorrow, who are not afraid to face challenges, solve real-world problems, and create positive change in their communities.
-            Encourage the growth of skills and talents through creative arts, science, ICT, and sports — making learning not just effective, but exciting.
+            Encourage the growth of skills and talents through creative arts, science, ICT, and sports ,making learning not just effective, but exciting.
             Foster a sense of belonging, where every child feels valued, seen, and supported by caring teachers and staff.
-            At Crystal Peters Academy, we do not only prepare students for exams — we prepare them for life.
-            We see a future filled with graduates from our school who will shine as doctors, engineers, artists, teachers, innovators, entrepreneurs, and global citizens — proud of where they started and confident in where they are going.
+            At Crystal Peters Academy, we do not only prepare students for exams , we prepare them for life.
+            We see a future filled with graduates from our school who will shine as doctors, engineers, artists, teachers, innovators, entrepreneurs, and global citizens , proud of where they started and confident in where they are going.
             "We are raising stars. We are nurturing greatness. We are building the future — one child at a time."</p>
             
         </div>
@@ -246,7 +246,7 @@
         
         <div class="stat-item">
             <div class="stat-icon"><i class='bx bxs-calendar'></i></div>
-            <div class="stat-number">5+</div>
+            <div class="stat-number">8+</div>
             <div class="stat-label">Years Old</div>
         </div>
     </div>
