--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
     </div>
 
     <div class="contact-item">
-      <a id="email" href="#"><i class="bx bx-envelope"></i>
-      [email protected]</a>
+      <a  href="mailto:crystalpeteracademy@gmail.com"><i class="bx bx-envelope"></i>
+     crystalpeteracademy@gmail.com</a>
     </div>
   </div>
 </section>
@@ -292,5 +292,6 @@
      <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
