--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <p class="copyright-text">
             <small>&copy; 2025 Crystal Peter Academy. All rights reserved.</small>
              </p>
-            <p><small>Designed and Created by <a href="https://dreamstorealities.vercel.app/#">Ex-Corper Ebube</a></small></p>
+            <p><small>Designed and Created by <a href="https://dreamstorealities.vercel.app/#"class="ebube">Ex-Corper Ebube</a></small></p>
         </div>
 
         <a href="https://www.tiktok.com/@crystal.peter.academy?_t=ZS-8yITpXKH2PP&_r=1" class="tiktok" target="_blank">
@@ -292,6 +292,7 @@
      <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
