--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <p><small>Designed and Created by <a href="https://dreamstorealities.vercel.app/#"class="ebube">Ex-Corper Ebube</a></small></p>
         </div>
 
-        <a href="https://www.tiktok.com/@crystal.peter.academy?_t=ZS-8yITpXKH2PP&_r=1" class="tiktok" target="_blank">
+        <a href="https://www.tiktok.com/@crystal.peter.academy?_t=ZS-8yITpXKH2PP&_r=1" class="tiktok" target="_blank" title="tiktok">
         <i class="bx bxl-tiktok" ></i> 
       </a>
         <a href="" class="linkedin" target="_blank">
@@ -293,6 +293,7 @@
      <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
