--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </div>
 
         <a href="https://www.tiktok.com/@crystal.peter.academy?_t=ZS-8yITpXKH2PP&_r=1" class="tiktok" target="_blank" title="tiktok">
-        <i class="bx bxl-tiktok" ></i> 
+        <i class="bx.bxl-tiktok" ></i> 
       </a>
         <a href="" class="linkedin" target="_blank">
         <i class="bx bxl-linkedin" ></i> 
@@ -293,6 +293,7 @@
      <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
