--- a/index.html
+++ b/index.html
@@ -270,22 +270,22 @@
         </div>
 
         <a href="https://www.tiktok.com/@crystal.peter.academy?_t=ZS-8yITpXKH2PP&_r=1" class="tiktok" target="_blank" title="tiktok">
-        <i class="bx.bxl-tiktok" ></i> 
+        <i class="bx bxl-tiktok" ></i> 
       </a>
-        <a href="" class="linkedin" target="_blank">
+        <a href="" class="linkedin" target="_blank" title="linkedin">
         <i class="bx bxl-linkedin" ></i> 
       </a>
-        <a href="#" class="facebook" target="_blank">
+        <a href="#" class="facebook" target="_blank" title="facebook">
         <i class="bx bxl-facebook" ></i> 
       </a>
-        <a href="" class="twitter" target="_blank">
+        <a href="" class="twitter" target="_blank" title="twitter">
         <i class="bx bxl-twitter" ></i> 
       </a>
         
-        <a href="" class="instagram" target="_blank">
+        <a href="" class="instagram" target="_blank" title="instagram">
         <i class="bx bxl-instagram" ></i> 
       </a>
-        <a href=" https://wa.me/2348035261270" class="whatsapp" target="_blank">
+        <a href=" https://wa.me/2348035261270" class="whatsapp" target="_blank" title="whatsapp">
         <i class="bx bxl-whatsapp" ></i> 
       </a>
     </footer>
@@ -293,6 +293,7 @@
      <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
