--- a/index.html
+++ b/index.html
@@ -236,6 +236,12 @@
             
         </div>
     </section>
+    <section id="Our-Vision" class="section">
+        <div class="container">
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.720978035333!2d3.10925040844749!3d6.556864693408887!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b82bae46cc55f%3A0xf806a12260464f64!2sLusada%20-%20Igbesa%20Rd%2C%20Ado%20Odo%2FOta%20112102%2C%20Ogun%20State!5e0!3m2!1sen!2sng!4v1755188468644!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
+    
     <div class="school-stats" id="Statistics">
         <div class="stat-item">
             <div class="stat-icon"><i class='bx bxs-user-check'></i></div>
@@ -294,6 +300,7 @@
      <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
