--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
     <link rel="icon" href="images/logo.png" type="image/png">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <meta name="google-site-verification" content="PwKy9nXWzVub9wgROfRsclrV3wioijF1wk1TS9MLp2Q" />
+
+    <!-- DNS Prefetch -->
+<link rel="dns-prefetch" href="//unpkg.com">
+<link rel="dns-prefetch" href="//www.google.com">
+<link rel="dns-prefetch" href="//maps.gstatic.com">
+<link rel="dns-prefetch" href="//www.googletagmanager.com">
+
+<!-- Preconnect (also warms up TCP + TLS handshake) -->
+<link rel="preconnect" href="https://unpkg.com" crossorigin>
+<link rel="preconnect" href="https://www.google.com" crossorigin>
+<link rel="preconnect" href="https://maps.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://www.googletagmanager.com" crossorigin>
+
    
 </head>
     
@@ -298,6 +311,7 @@
      <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
