--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <footer>
         <div class="container">
             <p class="copyright-text">
-            <small>&copy; 2025 Crystal Peter Academy. All rights reserved.</small>
+            <small>&copy; 2025 Crystal Peters Academy. All rights reserved.</small>
              </p>
             <p><small>Designed and Created by <a href="https://dreamstorealities.vercel.app/#"class="ebube">Ex-Corper Ebube</a></small></p>
         </div>
@@ -311,6 +311,7 @@
      <script src="script.js" defer></script>
 </body>
 </html>
+
 
 
 
