--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 <section id="School-Gallery" class="section">
     <div class="container">
         <h2>School Gallery</h2>
+          <div class="grid-container">
             <figure>
               <video width="" height="" loading="lazy" controls  poster="images/mrsudom.jpg"class="video">
                <source src="images/mrsudom.mp4" type="video/mp4">
@@ -242,6 +243,7 @@
                </video> 
                <figcaption>Red House Presentation During Christmas Party/Colour Day </figcaption  
             </figure>
+              </div>
         </div>
 </section>
 
@@ -329,6 +331,7 @@
     
 </body>
 </html>
+
 
 
 
