--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
                <img src="images/image6.jpg"  loading="lazy" type="image/jpeg" class="video">
                <figcaption> Crystal Peters Academy Educators</figcaption>
             </figure>
+               <pre>
+                   <h1>
+                       We Give You The
+                          Best At
+                       Crystal Peters
+                       Academy Join
+                         Us  Today!
+                   </h1>
+               </pre>    
            </div>    
 
            
@@ -361,6 +370,7 @@
     
 </body>
 </html>
+
 
 
 
