--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <p>"Crystal Peters Academy has transformed my child's learning experience. The teachers are kind, professional, and truly care about the students." — <em>Mrs Olamide</em> </p><br/>
     <p>"I love my school! I learn new things every day, and my teachers make learning fun." —<em> Justin, SS2 Student</em></p><br/>
     <p>"Enrolling my child here was the best decision I made. The environment is clean, safe, and focused on learning." — <em>Mrs Nwachukwu</em></p><br/>
-    <p><strong>Why Choose Crystal Peter Academy?</strong></p>
+    <p><strong>Why Choose Crystal Peters Academy?</strong></p>
     <ul>
     <li><p>Experienced and Passionate Educators</p></li>
     <li><p>Modern Classrooms and Learning Aids</p></li>
@@ -108,7 +108,7 @@
     </ul>    
     <p><strong>Growing With You</strong></p>
     <p>In just eight years, we have seen amazing progress , not only in the number of students we serve but also in the impact we make. Our students have gone on to win academic awards, represent the school in external competitions, and shine in their secondary school entrance exams.
-    At Crystal Peter Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.<br/>
+    At Crystal Peters Academy, we believe every child is a star waiting to shine. We are proud of how far we have come and even more excited about the future.<br/>
     </p>
     <p>We are the shining star,God has made us shine!</p>            
   </div>
@@ -117,7 +117,7 @@
 <section id="Admission" class="section">
 <div class="container">
     <h2>Admission</h2>
-        <p><strong>Admission Now Open at Crystal Peter Academy!</strong></p><br/>
+        <p><strong>Admission Now Open at Crystal Peters Academy!</strong></p><br/>
        <p> Are you looking for a school that combines academic excellence with strong moral values, modern teaching, and a nurturing environment? Look no further!</p>
         Crystal Peters Academy is now admitting new students for the 2025/2026 academic session. From KG1 to SS3, we provide quality education that prepares your child for a bright future.</p><br/>
         <p><strong>Admission is Ongoing – Hurry Now!</strong></p>
@@ -131,7 +131,7 @@
          <p><strong>Visit Us Today!</strong></p>
         <p>Come to our school for on-the-spot registration and campus tour.
         Behind Egun Bakery, Along Soda King Company, See-To-Me Bus Stop, Igbesa Road, Ogun State</p><br/>
-        <p>Give your child the gift of quality education — Enroll today at Crystal Peter Academy!</p>
+        <p>Give your child the gift of quality education — Enroll today at Crystal Peters Academy!</p>
     </div>
 </section>
 
@@ -176,7 +176,7 @@
              <video  loading="lazy" controls  poster="images/hassan.jpg" class="video">
                <source src="images/hassan.mp4" type="video/mp4">
               </video> 
-              <figcaption>Ex-Corper Hassan addressing the stundents</figcaption> 
+              <figcaption>Ex-Corper Hassan addressing the students</figcaption> 
             </figure>
            </div>
 
@@ -359,6 +359,7 @@
     
 </body>
 </html>
+
 
 
 
