--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               <video  loading="lazy" controls  poster="images/mike.jpg" class="video">
                 <source src="images/mike.mp4" type="video/mp4">
                </video> 
-                <figcaption>Corper Mike Anchoring Cultural Day Programme</figcaption> 
+                <figcaption>Ex-Corper Mike Anchoring Cultural Day Programme</figcaption> 
             </figure>
            </div>    
 
@@ -359,6 +359,7 @@
     
 </body>
 </html>
+
 
 
 
